# AIOps

./: .env.example  .gitignore  CICD_README.md  DEPLOYMENT_OPTIONS.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  GITHUB_HELM_RELEASE_SETUP.md  HELM_AUTO_RELEASE.md  HELM_DEPLOYMENT.md  HELM_QUICK_START.md  HELM_REPOSITORY.md  IMPLEMENTATION_SUMMARY.md  K8S_DEPLOYMENT_CHECKLIST.md  K8S_DEPLOYMENT_SUMMARY.md  K8S_DETECTOR_QUICK_START.md  KIND_LOCAL_SETUP.md  KUBERNETES_DEPLOYMENT.md  Makefile  NEXT_STEPS.md  QUICK_START_KIND.md  QUICK_START_SELF_HOSTED.md  README.md  SELF_HOSTED_RUNNER_SETUP.md  demo_detector.py  kind-config.yaml  pyproject.toml  requirements.txt  test_detector_standalone.py
.github/workflows/: README.md  deploy-kind.yml  deploy-self-hosted.yml  deploy.yml  release-helm.yml
config/: config.local.yaml  config.yaml  mcp_servers.json
deploy/k8s/: ARCHITECTURE.md  FILES_OVERVIEW.md  README.md  all-in-one.yaml  configmap.yaml  deploy.sh  deployment.yaml  namespace.yaml  rbac.yaml  secret-template.yaml  service.yaml
docs/: PROGRESS.md  PROJECT_STATUS.md  QUICKSTART.md
helm/opsagent/: Chart.yaml  README.md  values.yaml
helm/opsagent/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
local-dev/kind/: kind-config.yaml
local-dev/test-manifests/: README.md
scripts/: deploy-local.sh  run-e2e-tests.sh  setup-local-env.sh  teardown-local-env.sh
src/: __init__.py  main.py
src/api/: server.py
src/core/: __init__.py  detection_engine.py  remediation_orchestrator.py  scheduler.py
src/detectors/: __init__.py
src/detectors/aws/: __init__.py  kinesis_shards.py  rds_mysql.py
src/detectors/azure/: __init__.py
src/detectors/base/: __init__.py  detector.py
src/utils/: config.py  logger.py
tests/: __init__.py  conftest.py
tests/e2e/: test_detection.py  test_environment.py
(+16 files in other folders)
